[package]
name = "popoki"
version = "0.1.0"
edition = "2021"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
description = "Popoki (cat in hawaiian) is a faster Wordle solver built in Rust using Information Theory."
readme = "README.md"
license-file = "LICENSE.txt"
repository = "https://github.com/LuisCardosoOliveira/popoki"
keywords = ["wordle", "solver", "informationtheory", "popoki"]
categories = ["algorithms", "tools"]

# Profile setup https://doc.rust-lang.org/cargo/reference/profiles.html
# TL;DR: optimises for code gen size and strip out unnecessary assembly instructions
[profile.release]
panic = "abort"
lto = true # invokes the dark magic from LLVM's to link time optimizations (LTO)
codegen-units=1 # optimise code gen size
opt-level="s" # optimise for binary size

[dependencies]
itertools = "0.10"
clap = { version = "3", features = ["derive"]}
once_cell = "1"